--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,18 @@
 {
     "name": "rax/bundle-installer",
+    "description": "Bundle installer for the Rax PHP framework.",
     "type": "composer-installer",
     "license": "BSD 3-Clause",
+    "homepage": "http://raxproject.com",
     "autoload": {
         "psr-0": {
-            "Rax": "src/"
+            "Rax\\": "src/"
         }
     },
     "extra": {
         "class": "Rax\\Composer\\BundleInstaller"
     },
-    "minimum-stability": "dev"
+    "require-dev": {
+        "composer/composer": "*@dev"
+    }
 }
