--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,10 @@
 {
     "name": "rax/bundle-installer",
-    "description": "Bundle installer for the Rax PHP framework.",
+    "description": "Bundle installer for the Rax framework.",
     "type": "composer-installer",
     "license": "BSD-3-Clause",
     "homepage": "http://raxproject.com",
+    "keywords": ["rax", "installer"],
     "autoload": {
         "psr-0": {
             "Rax\\": "src/"
@@ -12,7 +13,7 @@
     "extra": {
         "class": "Rax\\Composer\\RaxInstaller",
         "branch-alias": {
-            "dev-master": "1.0.x-dev"
+            "dev-master": "0.0.1-dev"
         }
     },
     "require-dev": {
